--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "format": "prettier --write .",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@capacitor/android": "^7.1.0",
@@ -93,24 +96,29 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-  "@eslint/js": "^9.9.0",
-  "@tailwindcss/typography": "^0.5.15",
-  "@types/node": "^22.5.5",
-  "@types/react": "^18.3.3",
-  "@types/react-dom": "^18.3.0",
-  "@vitejs/plugin-react-swc": "^3.5.0",
-  "autoprefixer": "^10.4.20",
-  "eslint": "^9.9.0",
-  "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-  "eslint-plugin-react-refresh": "^0.4.9",
-  "globals": "^15.9.0",
-  "lovable-tagger": "^1.1.8",
-  "postcss": "^8.4.47",
-  "tailwindcss": "^3.4.11",
-  "typescript": "^5.5.3",
-  "typescript-eslint": "^8.0.1",
-  "vite": "^5.4.17",
-  "esbuild": "^0.21.3" // added esbuild
-}
-  }
+    "@eslint/js": "^9.9.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "lovable-tagger": "^1.1.8",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.17",
+    "esbuild": "^0.21.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ready-To-Work-High-School/jobseekaroo.git"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
