--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@
 # JWT Secret will be automatically generated if not provided
 # JWT_SECRET=
 
+CALENDLY_CLIENT_ID=gP82w-LylhBf7GzVW7Z24xu4AKcKBpPhhT0x82pi3gwf
