--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@
 # JWT_SECRET=
 
 CALENDLY_CLIENT_ID=gP82w-LylhBf7GzVW7Z24xu4AKcKBpPhhT0x82pi3gwf
+CALENDLY_CLIENT_SECRET=W6H6SAuWtvZCEFk--JvdJv12p2dIuV2t69JoysCW0MM
